// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Personality actions back requires answered slides 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Innovative
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "0%",
        }
      }
    />
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality actions back shows button 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Short Cuts
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "1.36986301369863%",
        }
      }
    />
    <div
      className="slide left"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a parachuter taken from the back, just before a jump from a helicopter."
        src="https://traitify.imgix.net/slides/8d323b39-d6f6-4e4b-a55f-27a86889bdb3_desktop?auto=format&fp-x=45&fp-y=53&h=800&w=600"
      />
    </div>
    <button
      className="back"
      onClick={[Function]}
      type="button"
    >
      <span
        alt="back"
      >
        chevron-left
      </span>
    </button>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality actions back triggers action 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Innovative
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "0%",
        }
      }
    />
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality actions fullscreen shows button 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Innovative
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "0%",
        }
      }
    />
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
    <button
      className="fullscreen"
      onClick={[Function]}
      type="button"
    >
      <span>
        maximize
      </span>
    </button>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality actions fullscreen triggers action 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Innovative
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "0%",
        }
      }
    />
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
    <button
      className="fullscreen"
      onClick={[Function]}
      type="button"
    >
      <span>
        minimize
      </span>
    </button>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality actions fullscreen untriggers action 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Innovative
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "0%",
        }
      }
    />
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
    <button
      className="fullscreen"
      onClick={[Function]}
      type="button"
    >
      <span>
        maximize
      </span>
    </button>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality actions response saves me 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Short Cuts
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "1.36986301369863%",
        }
      }
    />
    <div
      className="slide left"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a parachuter taken from the back, just before a jump from a helicopter."
        src="https://traitify.imgix.net/slides/8d323b39-d6f6-4e4b-a55f-27a86889bdb3_desktop?auto=format&fp-x=45&fp-y=53&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality actions response saves not me 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Short Cuts
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "1.36986301369863%",
        }
      }
    />
    <div
      className="slide left"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a parachuter taken from the back, just before a jump from a helicopter."
        src="https://traitify.imgix.net/slides/8d323b39-d6f6-4e4b-a55f-27a86889bdb3_desktop?auto=format&fp-x=45&fp-y=53&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality image error renders error 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    slide_error
  </div>
  <div
    className="image"
  >
    <div
      className="error"
    >
      <button
        className="link"
        onClick={[Function]}
        type="button"
      >
        try_again
      </button>
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response btnDisabled me"
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response btnDisabled notMe"
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality image error retry renders loading 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    loading
  </div>
  <div
    className="image"
  >
    <div
      className="loading"
    >
      <div
        className="loadingContainer"
      >
        <div
          className="loading"
        >
          <i />
          <i />
        </div>
      </div>
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response btnDisabled me"
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response btnDisabled notMe"
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality image error retry renders slide 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Innovative
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "0%",
        }
      }
    />
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality image loading renders loading 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    loading
  </div>
  <div
    className="image"
  >
    <div
      className="loading"
    >
      <div
        className="loadingContainer"
      >
        <div
          className="loading"
        >
          <i />
          <i />
        </div>
      </div>
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response btnDisabled me"
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response btnDisabled notMe"
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality image loading requires multiple loaded slides 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    loading
  </div>
  <div
    className="image"
  >
    <div
      className="loading"
    >
      <div
        className="loadingContainer"
      >
        <div
          className="loading"
        >
          <i />
          <i />
        </div>
      </div>
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response btnDisabled me"
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response btnDisabled notMe"
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality image loads renders slide 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Innovative
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "0%",
        }
      }
    />
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality instructions renders instructions 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    instructions
  </div>
  <div
    className="image"
  >
    <div
      className="instructions slide middle"
    >
      <div
        className="markdown"
      >
        <h1
          id="listen-up"
        >
          Listen Up
        </h1>
        <p>
          Click the buttons
        </p>
      </div>
      <button
        onClick={[Function]}
        type="button"
      >
        get_started
      </button>
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response btnDisabled me"
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response btnDisabled notMe"
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality instructions requires instructions 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    loading
  </div>
  <div
    className="image"
  >
    <div
      className="loading"
    >
      <div
        className="loadingContainer"
      >
        <div
          className="loading"
        >
          <i />
          <i />
        </div>
      </div>
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response btnDisabled me"
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response btnDisabled notMe"
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality instructions requires option 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    loading
  </div>
  <div
    className="image"
  >
    <div
      className="loading"
    >
      <div
        className="loadingContainer"
      >
        <div
          className="loading"
        >
          <i />
          <i />
        </div>
      </div>
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response btnDisabled me"
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response btnDisabled notMe"
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality instructions starts assessment 1`] = `
<div
  className="container"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    loading
  </div>
  <div
    className="image"
  >
    <div
      className="loading"
    >
      <div
        className="loadingContainer"
      >
        <div
          className="loading"
        >
          <i />
          <i />
        </div>
      </div>
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response btnDisabled me"
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response btnDisabled notMe"
      type="button"
    >
      not_me
    </button>
  </div>
</div>
`;

exports[`Personality likert response saves me 1`] = `
<div
  className="container likertScale"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Short Cuts
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "1.36986301369863%",
        }
      }
    />
    <div
      className="slide left"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a parachuter taken from the back, just before a jump from a helicopter."
        src="https://traitify.imgix.net/slides/8d323b39-d6f6-4e4b-a55f-27a86889bdb3_desktop?auto=format&fp-x=45&fp-y=53&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response reallyNotMe"
      onClick={[Function]}
      type="button"
    >
      really_not_me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response reallyMe"
      onClick={[Function]}
      type="button"
    >
      really_me
    </button>
  </div>
</div>
`;

exports[`Personality likert response saves not me 1`] = `
<div
  className="container likertScale"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Short Cuts
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "1.36986301369863%",
        }
      }
    />
    <div
      className="slide left"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a parachuter taken from the back, just before a jump from a helicopter."
        src="https://traitify.imgix.net/slides/8d323b39-d6f6-4e4b-a55f-27a86889bdb3_desktop?auto=format&fp-x=45&fp-y=53&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response reallyNotMe"
      onClick={[Function]}
      type="button"
    >
      really_not_me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response reallyMe"
      onClick={[Function]}
      type="button"
    >
      really_me
    </button>
  </div>
</div>
`;

exports[`Personality likert response saves really me 1`] = `
<div
  className="container likertScale"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Short Cuts
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "1.36986301369863%",
        }
      }
    />
    <div
      className="slide left"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a parachuter taken from the back, just before a jump from a helicopter."
        src="https://traitify.imgix.net/slides/8d323b39-d6f6-4e4b-a55f-27a86889bdb3_desktop?auto=format&fp-x=45&fp-y=53&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response reallyNotMe"
      onClick={[Function]}
      type="button"
    >
      really_not_me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response reallyMe"
      onClick={[Function]}
      type="button"
    >
      really_me
    </button>
  </div>
</div>
`;

exports[`Personality likert response saves really not me 1`] = `
<div
  className="container likertScale"
>
  <div
    className="caption"
    tabIndex="-1"
  >
    Short Cuts
  </div>
  <div
    className="image"
  >
    <div
      className="progress"
      style={
        Object {
          "width": "1.36986301369863%",
        }
      }
    />
    <div
      className="slide left"
    >
      <img
        alt="A photo of a group of young adults working on a robotic project together."
        src="https://traitify.imgix.net/slides/ee566dfc-0c07-4987-b497-ce6b54830a3e_desktop?auto=format&fp-x=75&fp-y=73&h=800&w=600"
      />
    </div>
    <div
      className="slide middle"
    >
      <img
        alt="A photo of a heated TV dinner next to silverware, a glass and a TV remote control."
        src="https://traitify.imgix.net/slides/4c861f4a-b253-4a56-a9e9-519eafd5023e_desktop?auto=format&fp-x=50&fp-y=50&h=800&w=600"
      />
    </div>
    <div
      className="slide right"
    >
      <img
        alt="A photo of a parachuter taken from the back, just before a jump from a helicopter."
        src="https://traitify.imgix.net/slides/8d323b39-d6f6-4e4b-a55f-27a86889bdb3_desktop?auto=format&fp-x=45&fp-y=53&h=800&w=600"
      />
    </div>
  </div>
  <div
    className="buttons"
  >
    <button
      className="traitify--response-button response reallyNotMe"
      onClick={[Function]}
      type="button"
    >
      really_not_me
    </button>
    <button
      className="traitify--response-button response notMe"
      onClick={[Function]}
      type="button"
    >
      not_me
    </button>
    <button
      className="traitify--response-button response me"
      onClick={[Function]}
      type="button"
    >
      me
    </button>
    <button
      className="traitify--response-button response reallyMe"
      onClick={[Function]}
      type="button"
    >
      really_me
    </button>
  </div>
</div>
`;

exports[`Personality likert submit submits results 1`] = `
[MockFunction put] {
  "calls": Array [
    Array [
      "/assessments/eafd274c-b825-48ba-9a00-60b827eba277/slides",
      Array [
        Object {
          "id": "2ea19c7f-bf2b-4dc0-9bd3-b7e8566a54eb",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "fbd27c93-aaac-4757-886c-fa3a434c1dfe",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "8ade7c57-1c01-469b-af04-b336bd285902",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "b29b503e-d8ab-41a9-b306-6cae1579f882",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "0db65bec-1617-4b4e-a866-fd9754a1b34c",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "df3fdad4-5d3c-4b28-b634-c681bc6a6b66",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "c3e52551-09b4-49d8-b799-859907104a5a",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "b520e7dd-ba82-4065-906d-430035f6bbc8",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "4b618694-3a58-4e39-bf60-ead3a3daf7c4",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "34036fef-f935-4198-8b37-842975a9a59e",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "63c1eb98-8873-4798-a76a-ec14d02988f1",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "f8b5b529-80a7-48a7-890c-766c4d20cadb",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "d3bca2bb-fba9-476f-9dc2-d1a50ff30619",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "b2f8a151-f1d5-4dd8-8658-6843e7c257c5",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "f029c9e2-e3b3-4626-ad64-214def00cb27",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "a99b5f7a-07ea-4913-8dc8-006c961165a8",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "6bbbd5b2-8819-4878-bdca-dcaeeab3e871",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "619c329b-38da-4e39-922b-4003311b131d",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "d37352e4-d1a8-4aa0-9ace-ec37d938743f",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "7e5a9624-4721-44c6-a3a3-b9c35ce47c7d",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "72500c70-a2db-4131-9299-921b07108231",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "f85f0aa9-d3a0-4301-b6b4-565a8e955a84",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "4b2a4c3b-5813-4a8a-812b-619aeb32b739",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "a144f95a-0dc1-4b2a-b250-dfb26b60b397",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "ceadf477-ec76-4622-b322-8daf5583c717",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "efb88fba-4752-4724-a237-e0676f922dc2",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "cfa380aa-ab7a-49a0-ac84-74aa4f4877ae",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "2525ebd2-3a7b-437d-8bd1-341f21bfffe7",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "8f7b13c0-86e4-4302-8b6c-21aaaf6643a2",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "bb1eded6-4a5a-4691-9905-64d59155b0e3",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "1fa80847-f85b-474c-b9df-512b12ef9aa9",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "f541f4b6-975c-4c43-b066-41c2717011f8",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "ce785ef4-0007-4b14-91bf-719d5db29c4c",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "57fda2e0-bf20-42ec-b4ae-02dbddbf8452",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "21c81096-a4fc-4a16-8c78-f68247e00c24",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "b04f73ed-e6c8-40d2-b34c-df88259e62ed",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "bee84229-0e2b-4065-a213-ab1845d60deb",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "684cbadb-3689-45c6-9b28-dfc37e3cbef2",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "89d9b415-5053-4da0-9554-0e9b1f69f055",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "7b7606cb-2be2-4f3f-96a3-f9984173f703",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "faf2542b-b1e0-4133-85bd-9cda9df6eedf",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "d978d56b-9b28-4152-b9a8-c90624f6b6b6",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "78080300-9760-4827-990d-de5173b88ceb",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "773c0d40-8ef4-4bea-9ee0-d2b688d36956",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "5cf47d0a-1b39-4f89-bdfa-14cbeab72b33",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "80cad1bf-d63f-49b0-a110-29974219f262",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "7f74e429-2d5f-4728-a84e-518048eddc2d",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "301ce0f7-da79-4308-8189-6dd34868d359",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "185b0bf0-5a58-4fd5-a51b-2a0c3eac64c3",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "6e79fe05-b9b1-446c-81c0-aeb008db54c4",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "565f7bf6-b800-4801-9e45-dbb150cb47ba",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "90ef9f97-75e6-40a1-ba71-4b8d41c07958",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "860733c0-f759-4766-9463-4871868fe946",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "a7348285-e72c-4e02-8a06-c22c16b34636",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "99fdd71e-2d70-4ea2-8002-b1d26d448980",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "d2f0baa7-7a7b-4e3c-9702-acc4ba234fce",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "bbaac0da-5fc7-4d86-b4c2-12d080f1ac5c",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "7a29c2a1-2607-4bef-82e2-e26316897e4a",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "b12fd0e2-fa9a-476e-b75c-c601d35b380c",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "0e6ac7fc-13c4-47e6-8b39-990e1e49ec3c",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "7c33618c-ff55-485a-8fe9-c66b113bb31d",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "0797c92a-e9f3-4ecd-b879-e6766f39f77b",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "22596362-5b01-4e1a-bda0-487381840d8e",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "bc50f2ff-89e7-4177-aac0-acba3fffcbc1",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "20b50744-e7d2-457b-ae52-324b0beab2cd",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "61b89802-d04f-4007-8217-0a2ebc527ffe",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "506319da-8add-4cbf-9754-631e04b101fa",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "2d95d934-3d48-48e9-ad4c-acf3b0ca50e3",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "b52211da-7e97-4124-8720-353ab2d7a2d6",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "3cb5fe0e-e0ef-48e8-8a33-4c47fcc17957",
          "likert_response": "NOT_ME",
          "time_taken": 600,
        },
        Object {
          "id": "f13fce98-a4cd-446e-9553-af8d04855f22",
          "likert_response": "ME",
          "time_taken": 600,
        },
        Object {
          "id": "95aa8596-7842-404f-8f4d-44415be23b7b",
          "likert_response": "REALLY_ME",
          "time_taken": 600,
        },
        Object {
          "id": "5b25e889-612a-4590-aabc-8e9f64d6af04",
          "likert_response": "REALLY_NOT_ME",
          "time_taken": 600,
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`Personality renders nothing if results ready 1`] = `null`;

exports[`Personality submit errors automatically retries request 1`] = `
[MockFunction put] {
  "calls": Array [
    Array [
      "/assessments/eafd274c-b825-48ba-9a00-60b827eba277/slides",
      Array [
        Object {
          "id": "2ea19c7f-bf2b-4dc0-9bd3-b7e8566a54eb",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "fbd27c93-aaac-4757-886c-fa3a434c1dfe",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "8ade7c57-1c01-469b-af04-b336bd285902",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b29b503e-d8ab-41a9-b306-6cae1579f882",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "0db65bec-1617-4b4e-a866-fd9754a1b34c",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "df3fdad4-5d3c-4b28-b634-c681bc6a6b66",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "c3e52551-09b4-49d8-b799-859907104a5a",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b520e7dd-ba82-4065-906d-430035f6bbc8",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "4b618694-3a58-4e39-bf60-ead3a3daf7c4",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "34036fef-f935-4198-8b37-842975a9a59e",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "63c1eb98-8873-4798-a76a-ec14d02988f1",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f8b5b529-80a7-48a7-890c-766c4d20cadb",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "d3bca2bb-fba9-476f-9dc2-d1a50ff30619",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b2f8a151-f1d5-4dd8-8658-6843e7c257c5",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f029c9e2-e3b3-4626-ad64-214def00cb27",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "a99b5f7a-07ea-4913-8dc8-006c961165a8",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "6bbbd5b2-8819-4878-bdca-dcaeeab3e871",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "619c329b-38da-4e39-922b-4003311b131d",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "d37352e4-d1a8-4aa0-9ace-ec37d938743f",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "7e5a9624-4721-44c6-a3a3-b9c35ce47c7d",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "72500c70-a2db-4131-9299-921b07108231",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f85f0aa9-d3a0-4301-b6b4-565a8e955a84",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "4b2a4c3b-5813-4a8a-812b-619aeb32b739",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "a144f95a-0dc1-4b2a-b250-dfb26b60b397",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "ceadf477-ec76-4622-b322-8daf5583c717",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "efb88fba-4752-4724-a237-e0676f922dc2",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "cfa380aa-ab7a-49a0-ac84-74aa4f4877ae",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "2525ebd2-3a7b-437d-8bd1-341f21bfffe7",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "8f7b13c0-86e4-4302-8b6c-21aaaf6643a2",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "bb1eded6-4a5a-4691-9905-64d59155b0e3",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "1fa80847-f85b-474c-b9df-512b12ef9aa9",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f541f4b6-975c-4c43-b066-41c2717011f8",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "ce785ef4-0007-4b14-91bf-719d5db29c4c",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "57fda2e0-bf20-42ec-b4ae-02dbddbf8452",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "21c81096-a4fc-4a16-8c78-f68247e00c24",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b04f73ed-e6c8-40d2-b34c-df88259e62ed",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "bee84229-0e2b-4065-a213-ab1845d60deb",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "684cbadb-3689-45c6-9b28-dfc37e3cbef2",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "89d9b415-5053-4da0-9554-0e9b1f69f055",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7b7606cb-2be2-4f3f-96a3-f9984173f703",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "faf2542b-b1e0-4133-85bd-9cda9df6eedf",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "d978d56b-9b28-4152-b9a8-c90624f6b6b6",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "78080300-9760-4827-990d-de5173b88ceb",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "773c0d40-8ef4-4bea-9ee0-d2b688d36956",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "5cf47d0a-1b39-4f89-bdfa-14cbeab72b33",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "80cad1bf-d63f-49b0-a110-29974219f262",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7f74e429-2d5f-4728-a84e-518048eddc2d",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "301ce0f7-da79-4308-8189-6dd34868d359",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "185b0bf0-5a58-4fd5-a51b-2a0c3eac64c3",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "6e79fe05-b9b1-446c-81c0-aeb008db54c4",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "565f7bf6-b800-4801-9e45-dbb150cb47ba",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "90ef9f97-75e6-40a1-ba71-4b8d41c07958",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "860733c0-f759-4766-9463-4871868fe946",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "a7348285-e72c-4e02-8a06-c22c16b34636",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "99fdd71e-2d70-4ea2-8002-b1d26d448980",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "d2f0baa7-7a7b-4e3c-9702-acc4ba234fce",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "bbaac0da-5fc7-4d86-b4c2-12d080f1ac5c",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7a29c2a1-2607-4bef-82e2-e26316897e4a",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "b12fd0e2-fa9a-476e-b75c-c601d35b380c",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "0e6ac7fc-13c4-47e6-8b39-990e1e49ec3c",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7c33618c-ff55-485a-8fe9-c66b113bb31d",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "0797c92a-e9f3-4ecd-b879-e6766f39f77b",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "22596362-5b01-4e1a-bda0-487381840d8e",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "bc50f2ff-89e7-4177-aac0-acba3fffcbc1",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "20b50744-e7d2-457b-ae52-324b0beab2cd",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "61b89802-d04f-4007-8217-0a2ebc527ffe",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "506319da-8add-4cbf-9754-631e04b101fa",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "2d95d934-3d48-48e9-ad4c-acf3b0ca50e3",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "b52211da-7e97-4124-8720-353ab2d7a2d6",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "3cb5fe0e-e0ef-48e8-8a33-4c47fcc17957",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "f13fce98-a4cd-446e-9553-af8d04855f22",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "95aa8596-7842-404f-8f4d-44415be23b7b",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "5b25e889-612a-4590-aabc-8e9f64d6af04",
          "response": true,
          "time_taken": 600,
        },
      ],
    ],
    Array [
      "/assessments/eafd274c-b825-48ba-9a00-60b827eba277/slides",
      Array [
        Object {
          "id": "2ea19c7f-bf2b-4dc0-9bd3-b7e8566a54eb",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "fbd27c93-aaac-4757-886c-fa3a434c1dfe",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "8ade7c57-1c01-469b-af04-b336bd285902",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b29b503e-d8ab-41a9-b306-6cae1579f882",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "0db65bec-1617-4b4e-a866-fd9754a1b34c",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "df3fdad4-5d3c-4b28-b634-c681bc6a6b66",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "c3e52551-09b4-49d8-b799-859907104a5a",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b520e7dd-ba82-4065-906d-430035f6bbc8",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "4b618694-3a58-4e39-bf60-ead3a3daf7c4",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "34036fef-f935-4198-8b37-842975a9a59e",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "63c1eb98-8873-4798-a76a-ec14d02988f1",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f8b5b529-80a7-48a7-890c-766c4d20cadb",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "d3bca2bb-fba9-476f-9dc2-d1a50ff30619",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b2f8a151-f1d5-4dd8-8658-6843e7c257c5",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f029c9e2-e3b3-4626-ad64-214def00cb27",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "a99b5f7a-07ea-4913-8dc8-006c961165a8",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "6bbbd5b2-8819-4878-bdca-dcaeeab3e871",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "619c329b-38da-4e39-922b-4003311b131d",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "d37352e4-d1a8-4aa0-9ace-ec37d938743f",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "7e5a9624-4721-44c6-a3a3-b9c35ce47c7d",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "72500c70-a2db-4131-9299-921b07108231",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f85f0aa9-d3a0-4301-b6b4-565a8e955a84",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "4b2a4c3b-5813-4a8a-812b-619aeb32b739",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "a144f95a-0dc1-4b2a-b250-dfb26b60b397",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "ceadf477-ec76-4622-b322-8daf5583c717",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "efb88fba-4752-4724-a237-e0676f922dc2",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "cfa380aa-ab7a-49a0-ac84-74aa4f4877ae",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "2525ebd2-3a7b-437d-8bd1-341f21bfffe7",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "8f7b13c0-86e4-4302-8b6c-21aaaf6643a2",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "bb1eded6-4a5a-4691-9905-64d59155b0e3",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "1fa80847-f85b-474c-b9df-512b12ef9aa9",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f541f4b6-975c-4c43-b066-41c2717011f8",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "ce785ef4-0007-4b14-91bf-719d5db29c4c",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "57fda2e0-bf20-42ec-b4ae-02dbddbf8452",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "21c81096-a4fc-4a16-8c78-f68247e00c24",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b04f73ed-e6c8-40d2-b34c-df88259e62ed",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "bee84229-0e2b-4065-a213-ab1845d60deb",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "684cbadb-3689-45c6-9b28-dfc37e3cbef2",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "89d9b415-5053-4da0-9554-0e9b1f69f055",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7b7606cb-2be2-4f3f-96a3-f9984173f703",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "faf2542b-b1e0-4133-85bd-9cda9df6eedf",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "d978d56b-9b28-4152-b9a8-c90624f6b6b6",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "78080300-9760-4827-990d-de5173b88ceb",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "773c0d40-8ef4-4bea-9ee0-d2b688d36956",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "5cf47d0a-1b39-4f89-bdfa-14cbeab72b33",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "80cad1bf-d63f-49b0-a110-29974219f262",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7f74e429-2d5f-4728-a84e-518048eddc2d",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "301ce0f7-da79-4308-8189-6dd34868d359",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "185b0bf0-5a58-4fd5-a51b-2a0c3eac64c3",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "6e79fe05-b9b1-446c-81c0-aeb008db54c4",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "565f7bf6-b800-4801-9e45-dbb150cb47ba",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "90ef9f97-75e6-40a1-ba71-4b8d41c07958",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "860733c0-f759-4766-9463-4871868fe946",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "a7348285-e72c-4e02-8a06-c22c16b34636",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "99fdd71e-2d70-4ea2-8002-b1d26d448980",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "d2f0baa7-7a7b-4e3c-9702-acc4ba234fce",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "bbaac0da-5fc7-4d86-b4c2-12d080f1ac5c",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7a29c2a1-2607-4bef-82e2-e26316897e4a",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "b12fd0e2-fa9a-476e-b75c-c601d35b380c",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "0e6ac7fc-13c4-47e6-8b39-990e1e49ec3c",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7c33618c-ff55-485a-8fe9-c66b113bb31d",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "0797c92a-e9f3-4ecd-b879-e6766f39f77b",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "22596362-5b01-4e1a-bda0-487381840d8e",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "bc50f2ff-89e7-4177-aac0-acba3fffcbc1",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "20b50744-e7d2-457b-ae52-324b0beab2cd",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "61b89802-d04f-4007-8217-0a2ebc527ffe",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "506319da-8add-4cbf-9754-631e04b101fa",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "2d95d934-3d48-48e9-ad4c-acf3b0ca50e3",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "b52211da-7e97-4124-8720-353ab2d7a2d6",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "3cb5fe0e-e0ef-48e8-8a33-4c47fcc17957",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "f13fce98-a4cd-446e-9553-af8d04855f22",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "95aa8596-7842-404f-8f4d-44415be23b7b",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "5b25e889-612a-4590-aabc-8e9f64d6af04",
          "response": true,
          "time_taken": 600,
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`Personality submit errors renders default error 1`] = `
ComponentHandler {
  "ref": null,
  "renderer": <div
    className="container"
  >
    <div
      className="caption"
      tabIndex="-1"
    >
      Error Submitting
    </div>
    <div
      className="image"
    >
      <div
        className="error"
      >
        <button
          className="link"
          onClick={[Function]}
          type="button"
        >
          try_again
        </button>
      </div>
    </div>
    <div
      className="buttons"
    >
      <button
        className="traitify--response-button response btnDisabled me"
        type="button"
      >
        me
      </button>
      <button
        className="traitify--response-button response btnDisabled notMe"
        type="button"
      >
        not_me
      </button>
    </div>
  </div>,
}
`;

exports[`Personality submit errors renders json error 1`] = `
ComponentHandler {
  "ref": null,
  "renderer": <div
    className="container"
  >
    <div
      className="caption"
      tabIndex="-1"
    >
      Oh no
    </div>
    <div
      className="image"
    >
      <div
        className="error"
      >
        <button
          className="link"
          onClick={[Function]}
          type="button"
        >
          try_again
        </button>
      </div>
    </div>
    <div
      className="buttons"
    >
      <button
        className="traitify--response-button response btnDisabled me"
        type="button"
      >
        me
      </button>
      <button
        className="traitify--response-button response btnDisabled notMe"
        type="button"
      >
        not_me
      </button>
    </div>
  </div>,
}
`;

exports[`Personality submit errors renders text error 1`] = `
ComponentHandler {
  "ref": null,
  "renderer": <div
    className="container"
  >
    <div
      className="caption"
      tabIndex="-1"
    >
      Oh no
    </div>
    <div
      className="image"
    >
      <div
        className="error"
      >
        <button
          className="link"
          onClick={[Function]}
          type="button"
        >
          try_again
        </button>
      </div>
    </div>
    <div
      className="buttons"
    >
      <button
        className="traitify--response-button response btnDisabled me"
        type="button"
      >
        me
      </button>
      <button
        className="traitify--response-button response btnDisabled notMe"
        type="button"
      >
        not_me
      </button>
    </div>
  </div>,
}
`;

exports[`Personality submit submits results 1`] = `
[MockFunction put] {
  "calls": Array [
    Array [
      "/assessments/eafd274c-b825-48ba-9a00-60b827eba277/slides",
      Array [
        Object {
          "id": "2ea19c7f-bf2b-4dc0-9bd3-b7e8566a54eb",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "fbd27c93-aaac-4757-886c-fa3a434c1dfe",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "8ade7c57-1c01-469b-af04-b336bd285902",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b29b503e-d8ab-41a9-b306-6cae1579f882",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "0db65bec-1617-4b4e-a866-fd9754a1b34c",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "df3fdad4-5d3c-4b28-b634-c681bc6a6b66",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "c3e52551-09b4-49d8-b799-859907104a5a",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b520e7dd-ba82-4065-906d-430035f6bbc8",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "4b618694-3a58-4e39-bf60-ead3a3daf7c4",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "34036fef-f935-4198-8b37-842975a9a59e",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "63c1eb98-8873-4798-a76a-ec14d02988f1",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f8b5b529-80a7-48a7-890c-766c4d20cadb",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "d3bca2bb-fba9-476f-9dc2-d1a50ff30619",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b2f8a151-f1d5-4dd8-8658-6843e7c257c5",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f029c9e2-e3b3-4626-ad64-214def00cb27",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "a99b5f7a-07ea-4913-8dc8-006c961165a8",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "6bbbd5b2-8819-4878-bdca-dcaeeab3e871",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "619c329b-38da-4e39-922b-4003311b131d",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "d37352e4-d1a8-4aa0-9ace-ec37d938743f",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "7e5a9624-4721-44c6-a3a3-b9c35ce47c7d",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "72500c70-a2db-4131-9299-921b07108231",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f85f0aa9-d3a0-4301-b6b4-565a8e955a84",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "4b2a4c3b-5813-4a8a-812b-619aeb32b739",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "a144f95a-0dc1-4b2a-b250-dfb26b60b397",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "ceadf477-ec76-4622-b322-8daf5583c717",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "efb88fba-4752-4724-a237-e0676f922dc2",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "cfa380aa-ab7a-49a0-ac84-74aa4f4877ae",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "2525ebd2-3a7b-437d-8bd1-341f21bfffe7",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "8f7b13c0-86e4-4302-8b6c-21aaaf6643a2",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "bb1eded6-4a5a-4691-9905-64d59155b0e3",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "1fa80847-f85b-474c-b9df-512b12ef9aa9",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "f541f4b6-975c-4c43-b066-41c2717011f8",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "ce785ef4-0007-4b14-91bf-719d5db29c4c",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "57fda2e0-bf20-42ec-b4ae-02dbddbf8452",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "21c81096-a4fc-4a16-8c78-f68247e00c24",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "b04f73ed-e6c8-40d2-b34c-df88259e62ed",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "bee84229-0e2b-4065-a213-ab1845d60deb",
          "response": false,
          "time_taken": 600,
        },
        Object {
          "id": "684cbadb-3689-45c6-9b28-dfc37e3cbef2",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "89d9b415-5053-4da0-9554-0e9b1f69f055",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7b7606cb-2be2-4f3f-96a3-f9984173f703",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "faf2542b-b1e0-4133-85bd-9cda9df6eedf",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "d978d56b-9b28-4152-b9a8-c90624f6b6b6",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "78080300-9760-4827-990d-de5173b88ceb",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "773c0d40-8ef4-4bea-9ee0-d2b688d36956",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "5cf47d0a-1b39-4f89-bdfa-14cbeab72b33",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "80cad1bf-d63f-49b0-a110-29974219f262",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7f74e429-2d5f-4728-a84e-518048eddc2d",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "301ce0f7-da79-4308-8189-6dd34868d359",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "185b0bf0-5a58-4fd5-a51b-2a0c3eac64c3",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "6e79fe05-b9b1-446c-81c0-aeb008db54c4",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "565f7bf6-b800-4801-9e45-dbb150cb47ba",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "90ef9f97-75e6-40a1-ba71-4b8d41c07958",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "860733c0-f759-4766-9463-4871868fe946",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "a7348285-e72c-4e02-8a06-c22c16b34636",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "99fdd71e-2d70-4ea2-8002-b1d26d448980",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "d2f0baa7-7a7b-4e3c-9702-acc4ba234fce",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "bbaac0da-5fc7-4d86-b4c2-12d080f1ac5c",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7a29c2a1-2607-4bef-82e2-e26316897e4a",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "b12fd0e2-fa9a-476e-b75c-c601d35b380c",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "0e6ac7fc-13c4-47e6-8b39-990e1e49ec3c",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "7c33618c-ff55-485a-8fe9-c66b113bb31d",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "0797c92a-e9f3-4ecd-b879-e6766f39f77b",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "22596362-5b01-4e1a-bda0-487381840d8e",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "bc50f2ff-89e7-4177-aac0-acba3fffcbc1",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "20b50744-e7d2-457b-ae52-324b0beab2cd",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "61b89802-d04f-4007-8217-0a2ebc527ffe",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "506319da-8add-4cbf-9754-631e04b101fa",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "2d95d934-3d48-48e9-ad4c-acf3b0ca50e3",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "b52211da-7e97-4124-8720-353ab2d7a2d6",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "3cb5fe0e-e0ef-48e8-8a33-4c47fcc17957",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "f13fce98-a4cd-446e-9553-af8d04855f22",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "95aa8596-7842-404f-8f4d-44415be23b7b",
          "response": true,
          "time_taken": 600,
        },
        Object {
          "id": "5b25e889-612a-4590-aabc-8e9f64d6af04",
          "response": true,
          "time_taken": 600,
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
